# paaw

./: .dockerignore  .env.example  .gitignore  ARCHITECTURE.md  BUILDING_PLAN.md  CNAME  Dockerfile  LICENSE  README.md  docker-compose.yaml  index.html  pyproject.toml  start.sh
.github/workflows/: deploy-website.yml
configs/: default.yaml  llm.yaml
configs/searxng/: settings.yml
docs/: DESIGN_V3.md  SKILL_JOB_SPEC.md  index.html
docs/website/: CNAME
jobs/: .gitkeep
jobs/birthday_check/: job.md
jobs/morning_news/: job.md
jobs/track_berkshire_hasthaway/: job.md
mcp/: servers.json
paaw/: __init__.py  agent.py  config.py  main.py  models.py
paaw/api/: __init__.py  server.py
paaw/brain/: __init__.py  llm.py  prompts.py
paaw/cli/: __init__.py  main.py
paaw/integrations/: __init__.py  discord_bot.py
paaw/mental_model/: __init__.py  context.py  conversation.py  graph.py  interface.py  models.py  search.py  sync.py
paaw/onboarding/: __init__.py  extractor.py  flow.py
paaw/scheduler/: __init__.py  creator.py  executor.py  notifier.py  parser.py  runner.py  skills.py
paaw/templates/: base_new.html
paaw/templates/pages/: home.html  server_room.html
paaw/templates/partials/: graph_panel.html
paaw/tools/: __init__.py  conversation_tools.py  mcp_client.py  registry.py
scripts/: conversation_demo.py  init-db.sql  init-graph.sql
skills/: .gitkeep
skills/birthday_reminder/: skill.md
skills/web_researcher/: skill.md
tests/: __init__.py  test_basic.py
website/: index.html
