[project]
name = "paaw"
version = "0.1.0"
description = "PAAW - Personal AI Assistant that Works. A goal-oriented AI assistant with memory."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.12"
authors = [
    { name = "SivaRamSV", email = "siva@paaw.online" }
]
keywords = ["ai", "assistant", "llm", "memory", "personal"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    # Core async
    "asyncio-extras>=1.3.2",
    "uvloop>=0.19.0",
    
    # LLM
    "litellm>=1.40.0",
    
    # Database
    "asyncpg>=0.29.0",
    "pgvector>=0.3.0",
    
    # Cache/Queue
    "valkey>=6.0.0",
    
    # Web framework
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.0",
    "websockets>=12.0",
    
    # CLI
    "typer>=0.12.0",
    "rich>=13.7.0",
    
    # Data validation
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    
    # Utilities
    "python-dotenv>=1.0.0",
    "httpx>=0.27.0",
    "tenacity>=8.3.0",
    "aiohttp>=3.9.0",
    "croniter>=2.0.0",
    "tzlocal>=5.2",
    
    # Logging
    "structlog>=24.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
    "pre-commit>=3.7.0",
]

channels = [
    "python-telegram-bot>=21.0",
    "slack-bolt>=1.18.0",
    "discord.py>=2.3.0",
]

[project.scripts]
paaw = "paaw.cli.main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["paaw"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG",    # flake8-unused-arguments
    "SIM",    # flake8-simplify
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "B008",   # do not perform function calls in argument defaults
]

[tool.ruff.lint.isort]
known-first-party = ["paaw"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-v --cov=paaw --cov-report=term-missing"
